_sass/minima/_layout.scss
/**
 * Site header
 */
.site-header {
  //border-top: 5px solid $grey-color-dark;
  //border-bottom: 1px solid $grey-color-light;
  min-height: $spacing-unit * 1.865;
  padding: 0.5rem;
  background-color: #FFDE59;
  // Positioning context for the mobile navigation icon
  position: relative;
}

.bar {
  width: 90%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-left: auto;
  margin-right: auto;

}

/* Update these styles in your _layout.scss file */

.gradient {
  background-image: linear-gradient(#FFDE59, #FF914D);
  height: 100vh; /* Full viewport height initially */
  width: 100%;
  transition: height 0.5s ease;
  overflow: hidden;
  position: relative;
}

.zipper {
  position: relative;
  width: 100%;
  height: 100%;
  z-index: 10;
}

.zipper-container {
  position: absolute;
  top: 0;
  left: 50%;
  transform: translateX(-50%);
  width: 100px;
  height: 100%;
  overflow: visible; /* Allow zipper to be visible below */
}

.zipper-track {
  position: absolute;
  width: 20px;
  height: 100%;
  left: 50%;
  transform: translateX(-50%);
  background-color: #666;
  z-index: 15;
}

.zipper-slider {
  position: absolute;
  width: 40px;
  height: 60px;
  left: 50%;
  transform: translateX(-50%);
  top: 0;
  z-index: 20;
  background-color: #999;
  border-radius: 0 0 20px 20px;
  will-change: top; /* Performance hint for animations */
  box-shadow: 0 2px 5px rgba(0,0,0,0.3); /* Add shadow for depth */
}

.zipper-pull {
  position: absolute;
  width: 16px;
  height: 16px;
  border-radius: 50%;
  background-color: #666;
  border: 4px solid #999;
  bottom: 8px;
  left: 50%;
  transform: translateX(-50%);
  box-shadow: 0 1px 3px rgba(0,0,0,0.4); /* Add shadow for depth */
}

.zipper-left, .zipper-right {
  position: absolute;
  width: 40px;
  top: 0;
  height: 100%;
  z-index: 12;
}

.zipper-left {
  right: 50%;
  background-color: rgba(255, 145, 77, 0.8);
}

.zipper-right {
  left: 50%;
  background-color: rgba(255, 222, 89, 0.8);
}

.zipper-opening {
  position: absolute;
  width: 100%;
  height: 0;
  top: 0; /* Changed from 60px to 0 to fix the top highlighting issue */
  left: 0;
  z-index: 5;
  background-color: #FAF6EE;
  will-change: height; /* Performance hint */
}

/* Page content transitions */
.page-content {
  opacity: 1;
  transition: opacity 0.5s ease;
}



/* Specific styles for home page content */
.home-content {
  position: relative;
  z-index: 5;
}

/* Container for completed state */
.zipper-completed .gradient {
  height: 90px; /* Height after completion */
}

.zipper-completed .page-content {
  margin-top: 0;
}

.post-image {
  max-width: 100%;   // Ensures the image is responsive
  height: auto;      // Maintains aspect ratio
  width: 200px;      // Adjust this value to control the size of the image
}

.header-image {
  max-width: 50%;
  @include media-query($on-palm) {
    max-width: 100%;
  }
}

.site-title img {
  transition: transform 0.3s ease-in-out;

  &:hover {
    transform: scale(1.1);
  }
}

.page-content .wrapper {
  background-color: #FAF6EE;
  outline: 15px solid #FAF6EE;
  border-radius: 10px;
  @include media-query($on-palm) {
    outline: 5px solid #FAF6EE;
    border-radius: 0px;
  }
}

.site-title {
  @include relative-font-size(1.625);
  font-weight: 300;
  line-height: $base-line-height * $base-font-size * 2.25;
  letter-spacing: -1px;
  margin-bottom: 0;
  float: left;

  &,
  &:visited {
    color: $grey-color-dark;
  }
}

.site-nav {
  float: right;
  line-height: $base-line-height * $base-font-size * 2.25;
  font-size: 1.2em;
  font-weight: 500;

  .nav-trigger {
      display: none;
  }

  .menu-icon {
    display: none;
  }

  .page-link {
    color: $text-color;
    line-height: $base-line-height;
    font-family: 'Saint George';
    position: relative;
    text-decoration: none; // No underline by default
    transition: color 0.3s ease, transform 0.3s ease;
  
    &:not(:last-child) {
      margin-right: 40px;
    }
  
    &:hover, &.active { // No underline on hover or active
      color: #0170B8;
      transform: translateY(-3px);
      text-decoration: none;
    }
  
    &::after {
      content: '';
      position: absolute;
      width: 0;
      height: 2px;
      background-color: #FF914D;
      left: 0;
      bottom: -5px;
      transition: width 0.3s ease;
    }
  
    &:hover::after, &.active::after {
      width: 100%;
    }
  }
  
  

  

  @include media-query($on-palm) {
    position: absolute;
    top: $spacing-unit * 0.6;
    right: $spacing-unit * 0.5;
    background-color: #FFDE59;

    z-index: 1004;
    border-radius: 5px;
    text-align: right;

    label[for="nav-trigger"] {
      display: block;
      float: right;
      width: 36px;
      height: 36px;
      z-index: 2;
      background: #FFDE59;
      padding: 8px;
      border-radius: 50%;
      box-shadow: 0 2px 5px rgba(0,0,0,0.2);
      cursor: pointer;
      transition: transform 0.3s ease;

      &:hover {
        transform: rotate(90deg);
      }

      &:active {
        transform: rotate(90deg);
      }

    }

    .menu-icon {
      display: block;
      float: right;
      width: 36px;
      height: 26px;
      line-height: 0;
      padding-top: 10px;
      text-align: center;

      > svg {
        fill: black;
      }
    }

    input ~ .trigger {
      clear: both;
      display: none;
      border: 1px solid $grey-color-light;
      padding-bottom: 10px;
      padding-top: 10px;
      animation: fadeIn 0.5s ease-in;
    }

    @keyframes fadeIn {
      from {
        opacity: 0;
      }
      to {
        opacity: 1;
      }
    }
    

    input:checked ~ .trigger {
      display: block;
      padding-bottom: 5px;
    }

    .page-link {
      display: block;
      margin-left: 20px;
      padding: 5px 10px;
      
      &:not(:last-child) {
        margin-right: 0;
      }
    }
  }
}



/**
 * Site footer
 */
.site-footer {
  border-top: 1px solid $grey-color-light;
  padding-top: $spacing-unit * 0.5;
  background-color: #FFDE59;
}

.footer-heading {
  @include relative-font-size(1.125);
  margin-bottom: $spacing-unit * 0.5;
}

.contact-list,
.social-media-list {
  list-style: none;
  margin-left: 0;
}

.footer-col-wrapper {
  @include relative-font-size(0.9375);
  color: $grey-color;
  text-align: center;
  @extend %clearfix;
}

.footer-col {
  float: left;
  margin-bottom: $spacing-unit * 0.5;
  padding-left: $spacing-unit * 0.5;
}

.footer-col-1 {
  width: -webkit-calc(35% - (#{$spacing-unit} / 2));
  width:         calc(35% - (#{$spacing-unit} / 2));
}

.footer-col-2 {
  width: -webkit-calc(20% - (#{$spacing-unit} / 2));
  width:         calc(20% - (#{$spacing-unit} / 2));
}

.footer-col-3 {
  width: -webkit-calc(45% - (#{$spacing-unit} / 2));
  width:         calc(45% - (#{$spacing-unit} / 2));
}

@include media-query($on-laptop) {
  .footer-col-1,
  .footer-col-2 {
    width: -webkit-calc(50% - (#{$spacing-unit} / 2));
    width:         calc(50% - (#{$spacing-unit} / 2));
  }

  .footer-col-3 {
    width: -webkit-calc(100% - (#{$spacing-unit} / 2));
    width:         calc(100% - (#{$spacing-unit} / 2));
  }
}

@include media-query($on-palm) {
  .footer-col {
    float: none;
    width: -webkit-calc(100% - (#{$spacing-unit} / 2));
    width:         calc(100% - (#{$spacing-unit} / 2));
  }
}



/**
 * Page content
 */
.page-content {
  padding: $spacing-unit 0;
  flex: 1;
  // background-image: linear-gradient(to right, #FF914D, #FFDE59);
  background-color: $background-color;
  @include media-query($on-palm) {
    background-color: #FAF6EE; 
  }
  
}

.page-heading {
  @include relative-font-size(2);
}

.post-list-heading {
  @include relative-font-size(1.75);
  font-family: 'Saint George';
}

.post-list {
  margin-left: 0;
  list-style: none;

  > li {
    margin-bottom: $spacing-unit;
  }
}

.post-meta {
  font-size: $small-font-size;
  color: $grey-color;
}

.post-link {
  display: block;
  @include relative-font-size(1.5);
}

/**
 * Posts
 */
.post-header {
  margin-bottom: $spacing-unit;
  width: 100%;
  @include media-query($on-palm) {
    width: 100%;
    display: block;
  }
}

.post-title {
  @include relative-font-size(2.625);
  letter-spacing: -1px;
  line-height: 1;
  font-family: 'Saint George';
  width: 10%;
  @include media-query($on-laptop) {
    @include relative-font-size(2.25);
  }
}

.post-content {
  margin-bottom: $spacing-unit;

  h2 {
    @include relative-font-size(2);

    @include media-query($on-laptop) {
      @include relative-font-size(1.75);
    }
  }

  h3 {
    @include relative-font-size(1.625);

    @include media-query($on-laptop) {
      @include relative-font-size(1.375);
    }
  }

  h4 {
    @include relative-font-size(1.25);

    @include media-query($on-laptop) {
      @include relative-font-size(1.125);
    }
  }
}

